<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map_nav" />
    <item
        android:id="@+id/nav_sos"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/sos" />
    <item
        android:id="@+id/nav_family"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/family" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>
